<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.anxell.e3ak.SettingActivity">

    <com.anxell.e3ak.custom.MyToolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:titleText="@string/tooltip_FAQ" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toolbarView"
        android:background="@color/green" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line"
        android:id="@+id/faq_scrollview">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background">

            <TextView
                android:id="@+id/tit_admin_passcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/settings_Admin_pwd"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_admin_passcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_admin_passcode"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_admin_passcode"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tit_door_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_admin_passcode"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/door_sensor"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_door_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_door_sensor"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_door_sensor"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_door_sensor"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:adjustViewBounds="true"
                android:maxHeight="1000dp"
                android:maxWidth="1000dp"
                app:srcCompat="@drawable/ds" />


            <TextView
                android:id="@+id/tit_tamper_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ds"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/tamper_sensor"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_tamper_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_tamper_alarm"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_tamper_alarm"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tit_auto_proximity_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_tamper_alarm"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/proximity_read_range_setting"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_auto_proximity_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_auto_proximity_range"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_proximity_read_range"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tit_device_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_auto_proximity_range"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/device_time"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_device_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_device_time"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_device_time"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tit_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_device_time"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/user"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_users"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_users"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tit_audit_trail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_users"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/history"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_audit_trail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_audit_trail"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_history"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tit_backup_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_audit_trail"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/backup"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_backup_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_backup_data"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_backup"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tit_restore_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_backup_data"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/revert"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_restore_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_restore_backup"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_restore"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tit_reset_procedures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_restore_backup"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="70dp"
                android:text="@string/tooltip_dsc_reset_title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tit_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_reset_procedures"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_reset_button_title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_reset_button"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltup_dsc_reset_button_detail"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/reset_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_reset_button"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:adjustViewBounds="true"
                android:maxHeight="1000dp"
                android:maxWidth="1000dp"
                app:srcCompat="@drawable/reset_button" />

            <TextView
                android:id="@+id/tit_reset_pins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reset_button"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/tooltip_dsc_reset_pins_title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_reset_pins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_reset_pins"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltup_dsc_reset_pins_detail"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/reset_pins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dsc_reset_pins"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:adjustViewBounds="true"
                android:maxHeight="1000dp"
                android:maxWidth="1000dp"
                app:srcCompat="@drawable/reset_pins" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>