<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.anxell.e3ak.SettingActivity">

    <com.anxell.e3ak.custom.MyToolbar
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:titleText="@string/tooltip_FAQ" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toolbarView"
        android:background="@color/green" />

    <ScrollView
        android:id="@+id/faq_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background">

            <TextView
                android:id="@+id/tit_auto_proximity_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/proximity_read_range_setting"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dsc_auto_proximity_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit_auto_proximity_range"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/tooltip_dsc_proximity_read_range"
                android:textColor="#000000"
                android:textSize="18sp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>